               changing fonts in slides. (#28)
  - [bugfix]   Fix a missing class definition that caused problems when
               uploading files.
  - [bugfix]   Fix a bug where the editor media uploader popup didn't
               close when the (X) button was clicked if an uploade had
               previously failed.
  - [feature]  Allow space characters in upload filenames.

v0.2.1
  - [bugfix]   Fix a bug where the timeline didn't update after the
               selected queue was changed.
  - [bugfix]   Fix a server-side bug that prevented user creation from
               the user manager.

v0.2.0
  - [feature]  Implement keyboard shortcuts for the editor.
  - [feature]  Make it possible to preserve instance data when
               reinstalling.
  - [feature]  Implement a live slide preview in the editor.
  - [internal] Self host font files. (I actually don't particularly
               like including binary files in the GIT tree but I don't
               know of a better way so the font files are now included
               in the tree.)
  - [internal] Use SCSS instead of plain CSS for the stylesheets.
  - [internal] Import Bootstrap straight into the _default.scss file
               instead of including it in the HTML <head> tag.
  - [internal] Process CSS using PostCSS /w Autoprefixer.
  - [bugfix]   Fix a major security issue where the contents of the
               'data/' directory were accessible by requesting the
               different files with eg. a web browser. Even directory
               listings were enabled.
  - [feature]  Completely rewrite the markup transpiler system to
               improve its error detecting and reporting capabilities.
               The rewrite also introduced many other improvements. The
               transpiler now uses the familiar lexer-parser-evaluator
               architecture that most compilers use.
  - [feature]  Improve markup error reporting in the editor UI. Erroneous